
 562.	[cleanup]	Moved lib/dns/*conf.c to bin/named where they belong.

 561.	[func]		The 'datasize', 'stacksize', 'coresize' and 'files'
			clauses of the options{} statement are now implemented.

 560.	[bug]		dns_name_split did not properly the resulting prefix
			when a maximal length bitstring label was split which
			was preceded by another bitstring label. [RT #429]

 559.	[bug]		dns_name_split did not properly create the suffix
			when splitting within a maximal length bitstring label.

 558.	[func]		New functions, isc_resource_getlimit and
			isc_resource_setlimit.

 557.	[func]		Symbolic constants for libisc integral types.

 556.	[func]		The DNSSEC OK bit in the EDNS extended flags
			is now implemented.  Responses to queries without
			this bit set will not contain any DNSSEC records.

 555.	[bug]		A slave server attempting a zone transfer could 
			crash with an assertion failure on certain
			malformed responses from the master. [RT #457]

 554.	[bug]		In some cases, not all of the dnssec tools were
			properly installed.

 553.	[bug]		Incoming zone transfers deferred due to quota 
			were not started when quota was increased but 
			only when a transfer in progress finished. [RT #456]

 552.	[bug]		We were not correctly detecting the end of all c-style
			comments.  [RT #455]

 551.	[func]		Implemented the 'sortlist' option.

 550.	[func]		Support unknown rdata types and classes.

 549.	[bug]		"make" did not immediately abort the build when a
			subdirectory make failed [RT #450].

 548.	[func]		The lexer now ungets tokens more correctly.

 546.	[func]		Option 'lame-ttl' is now implemented.

 545.	[func]		Name limit and counting options removed from dig;
			they didn't work properly, and cannot be correctly
			implemented without significant changes.

 544.	[func]		Add statistics option, enable statistics-file option,
			add RNDC option "dump-statistics" to write out a
			query statistics file.

 543.	[doc]		The 'port' option is now documented.
